# lx

./: .gitignore  CHANGELOG.md  Cargo.toml  Cross.toml  Justfile  LICENCE  README.md  ROADMAP.md  build.rs  deny.toml  lxconfig.default.toml
.github/: dependabot.yml
.github/workflows/: audit.yml  build-binaries.yml  ci.yml  nightly.yml  release.yml
docs/: DESIGN.md  GUIDE.md  UPGRADING.md
man/: lx.1  lx.1.md  lxconfig.toml.5  lxconfig.toml.5.md
src/: config.rs  logger.rs  main.rs
src/config/: classes.rs  error.rs  formats.rs  init.rs  load.rs  mod.rs  personality.rs  schema.rs  settings.rs  show.rs  store.rs  styles.rs  themes.rs  upgrade.rs
src/fs/: dir.rs  dir_action.rs  fields.rs  file.rs  filter.rs  mod.rs  sort_registry.rs
src/fs/feature/: filesystem.rs  git.rs  jj.rs  jj_lib.rs  mod.rs  xattr.rs
src/info/: filetype.rs  sources.rs
src/options/: dir_action.rs  error.rs  file_name.rs  filter.rs  flags.rs  mod.rs  parser.rs  theme.rs  vars.rs  view.rs
src/output/: cell.rs  column_registry.rs  details.rs  escape.rs  file_name.rs  grid.rs  grid_details.rs  icons.rs  lines.rs  mod.rs  table.rs  time.rs  tree.rs
src/output/render/: blocks.rs  filetype.rs  flags.rs  git.rs  groups.rs  links.rs  mod.rs  octal.rs  permissions.rs  size.rs  times.rs  users.rs  vcs.rs  vcs_repos.rs
src/theme/: default_theme.rs  error.rs  key_registry.rs  lsc.rs  mod.rs  oklab.rs  smooth.rs  ui_styles.rs
tests/: cli_basics.rs  cli_columns.rs  cli_conditional.rs  cli_config.rs  cli_count.rs  cli_display.rs  cli_dropin.rs  cli_filtering.rs  cli_long_tiers.rs  cli_sorting.rs  cli_theme.rs  cli_time.rs  cli_total_size.rs  cli_vcs.rs  cli_xattr.rs
tests/support/: mod.rs
themes/: README.md  catppuccin-latte.toml  catppuccin-mocha.toml  dracula.toml  exa.toml  gruvbox-dark.toml  gruvbox-light.toml  lx-24bit-dark.toml  lx-24bit.toml  lx-256-dark.toml  lx-256.toml  nord-light.toml  nord.toml  solarized-dark.toml  solarized-light.toml  the-exa-future.toml
