[package]
name = "lx-ls"
description = "The file lister with personality! 🌟"
authors = ["Benjamin Sago <ogham@bsago.me>", "Johann Visagie <johann@visagie.za.net>"]
categories = ["command-line-utilities"]
keywords = ["ls", "files", "directory", "exa", "cli"]
edition = "2024"
rust-version = "1.94"
readme = "README.md"
license = "MIT"
repository = "https://github.com/wjv/lx"
version = "0.10.0-pre.31"

[[bin]]
name = "lx"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4.5", features = ["cargo", "derive", "wrap_help"] }
clap_complete = "4.6"
glob = "0.3"
libc = "0.2"
locale = "0.2"
log = "0.4"
natord-plus-plus = "2.0"
nu-ansi-term = "0.50"
rayon = "1.10"
phf = { version = "0.13", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
terminal_size = "0.4"
thiserror = "2.0"
toml = "1.1"
unicode-width = "0.2"
unit-prefix = "0.5"
uutils_term_grid = "0.8"

[target.'cfg(unix)'.dependencies]
uzers = "0.12"

[dependencies.git2]
version = "0.20"
optional = true
default-features = false

[dependencies.jj-lib]
version = "0.40"
optional = true
features = ["git"]

[dependencies.tokio]
version = "1"
optional = true
features = ["rt"]

[dependencies.futures]
version = "0.3"
optional = true

[features]
default = ["git"]
git = ["dep:git2"]
jj = ["dep:jj-lib", "dep:tokio", "dep:futures", "git"]
vendored-openssl = ["git2/vendored-openssl"]

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

# Make dev builds faster by excluding debug symbols
[profile.dev]
debug = false

# Optimise release builds for size
[profile.release]
lto = true
strip = true
opt-level = 3
codegen-units = 1
panic = "abort"
